# starcoin-monitor

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  USAGE.md  docker-build-localhost.sh  docker-compose.yml  env.example  test_setup.sh
.github/: docker_build.yml
.github/workflows/: docker_build.yml
docker/: Dockerfile
kube/: .gitignore  create-secret.sh  starcoin-monitor-deployment.yaml  starcoin-monitor-main-deployment.yaml
scripts/: get-chat-id.sh
src/: config.rs  daily_notification.rs  database.rs  helper.rs  index_monitor_logic.rs  lib.rs  main.rs  monitor.rs  monitor_dispatcher.rs  pubsub_client.rs  stc_scan_monitor.rs  stcscan_monitor.rs  stcscan_monitor_index.rs  telegram.rs  types.rs
src/monitor_handler/: default_monitor_handler.rs  mod.rs
