[package]
name = "starcoin-monitor"
version = "0.1.0"
edition = "2021"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
description = "Starcoin blockchain monitoring service"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
reqwest = { version = "0.11", features = ["json"] }
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"