[package]
name = "starcoin-monitor"
version = "0.1.0"
edition = "2021"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
description = "Starcoin blockchain monitoring service"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.47.0", features = ["full"] }
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# Starcoin dependencies
starcoin-rpc-client = { git = "https://github.com/starcoinorg/starcoin", rev = "ba7cd08110d3582361e0862f45109361036b50ce" }
starcoin-types = { git = "https://github.com/starcoinorg/starcoin", rev = "ba7cd08110d3582361e0862f45109361036b50ce" }
starcoin-rpc-api = { git = "https://github.com/starcoinorg/starcoin", rev = "ba7cd08110d3582361e0862f45109361036b50ce" }
starcoin-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "a742ddc0674022800341182cbb4c3681807b2f00" }